--- a/src/config/WebPage.css
+++ b/src/config/WebPage.css
@@ -8,7 +8,13 @@
     border-radius: .25rem;
     position: relative;
     overflow: hidden;
+    max-width: var(--message-width, 300px);
 }
+
+.WebPage:not(.with-small-photo) {
+    max-width: min-content;
+}
+
 /* 主控件-前缀(颜色条) */
 .WebPage:before {
 	content:" ";
@@ -36,7 +42,7 @@
 
 /* 内容 */
 .WebPage .WebPage--content {
-    max-width: var(--message-width, 350px);
+    /* max-width: var(--message-width, 300px); */
     position: relative;
     margin-inline-start: .25rem;
     display: -webkit-box;
